[package]
name = "bitfields-rs"
version = "1.0.0"
authors = ["qeeg <mszoopers@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qeeg/bitfields-rs/"
description = "A Rust macro to generate bitfields"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
